[project]
name = "flask-auth"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wellerson", email = "wllrsn.c@gmail.com"},
]
dependencies = ["Flask>=3.1.0", "Flask-SQLAlchemy>=3.1.1", "Flask-Login>=0.6.3", "Werkzeug>=3.1.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
